agentforce/force-app/main/default/objects/Consumption_Snapshot__c/Consumption_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Last known consumption summary read from Snowflake. Agents fall back to it when Snowflake is unreachable.</description>
    <label>Consumption Snapshot</label>
    <nameField><displayFormat>CS-{00000}</displayFormat><label>Snapshot</label><type>AutoNumber</type></nameField>
    <pluralLabel>Consumption Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>