agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Annualized_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Run_Rate__c</fullName>
    <label>Annualized Run Rate (Credits)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>