agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <description>Last usage date in the telemetry.</description>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>