agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Avg_Daily_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Active_Users__c</fullName>
    <label>Avg Daily Active Users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>