agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Consumed_In_Term__c.field-meta.xml
<CustomField>
    <fullName>Consumed_In_Term__c</fullName>
    <label>Consumed In Term</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>