agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Consumption_Trend__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Trend__c</fullName>
    <label>Consumption Trend</label>
    <length>50</length>
    <type>Text</type>
</CustomField>