agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Contract_Annual_Credits__c.field-meta.xml
<CustomField>
    <fullName>Contract_Annual_Credits__c</fullName>
    <label>Contract Annual Credits</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>