agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Contract_Utilization_Pct__c.field-meta.xml
<CustomField>
    <fullName>Contract_Utilization_Pct__c</fullName>
    <label>Contract Utilization %</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>