agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Decline_Pct__c.field-meta.xml
<CustomField>
    <fullName>Decline_Pct__c</fullName>
    <label>Decline %</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>