agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Declining_Workload__c.field-meta.xml
<CustomField>
    <fullName>Declining_Workload__c</fullName>
    <label>Declining Workload</label>
    <length>80</length>
    <type>Text</type>
</CustomField>