agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Fastest_Growing_Workload__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Growing_Workload__c</fullName>
    <label>Fastest Growing Workload</label>
    <length>80</length>
    <type>Text</type>
</CustomField>