agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Fastest_Growth_Pct__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Growth_Pct__c</fullName>
    <label>Fastest Growth %</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>