agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Last_90D_Growth_Pct__c.field-meta.xml
<CustomField>
    <fullName>Last_90D_Growth_Pct__c</fullName>
    <label>Last 90 Days Growth %</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>