agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Projected_Exhaustion_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Exhaustion_Date__c</fullName>
    <description>When capacity runs out at the current run rate.</description>
    <label>Projected Exhaustion Date</label>
    <type>Date</type>
</CustomField>