agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Projected_Term_End_Utilization_Pct__c.field-meta.xml
<CustomField>
    <fullName>Projected_Term_End_Utilization_Pct__c</fullName>
    <label>Projected Term-End Utilization %</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>