agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Recommended_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Use_Cases__c</fullName>
    <label>Recommended Use Cases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>