agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Snowflake_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Snowflake_Query_Id__c</fullName>
    <label>Snowflake Query Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>