agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Top_Workload__c.field-meta.xml
<CustomField>
    <fullName>Top_Workload__c</fullName>
    <label>Top Workload</label>
    <length>80</length>
    <type>Text</type>
</CustomField>