agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Top_Workload_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>Top_Workload_Share_Pct__c</fullName>
    <label>Top Workload Share %</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>