agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/Trailing_12M_Credits__c.field-meta.xml
<CustomField>
    <fullName>Trailing_12M_Credits__c</fullName>
    <label>Trailing 12M Credits</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>