agentforce/force-app/main/default/objects/Consumption_Snapshot__c/fields/YoY_Growth_Pct__c.field-meta.xml
<CustomField>
    <fullName>YoY_Growth_Pct__c</fullName>
    <label>YoY Growth %</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>