agentforce/force-app/main/default/objects/Consumption_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>As_Of_Date__c</columns>
    <columns>Contract_Utilization_Pct__c</columns>
    <columns>Projected_Exhaustion_Date__c</columns>
    <columns>Fastest_Growing_Workload__c</columns>
    <columns>Source__c</columns>
    <columns>Retrieved_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>